src/chat-ws/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-ws-service
spec:
  selector:
    app: chat-ws
  ports:
  - port: 3002
    targetPort: 8004
    protocol: TCP
